
[TestLexingKeywords - 1]
[]parser.Token{
    {
        Kind: &parser.TFn{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:3},
        },
    },
    {
        Kind: &parser.TVar{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:4},
            End:   ast.Location{Line:1, Column:7},
        },
    },
    {
        Kind: &parser.TVal{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:11},
        },
    },
}
---

[TestLexingOperators - 1]
[]parser.Token{
    {
        Kind: &parser.TPlus{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
    },
    {
        Kind: &parser.TMinus{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TAsterisk{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
    },
    {
        Kind: &parser.TSlash{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:7},
            End:   ast.Location{Line:1, Column:8},
        },
    },
    {
        Kind: &parser.TEquals{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:9},
            End:   ast.Location{Line:1, Column:10},
        },
    },
}
---

[TestLexingIdentifiers - 1]
[]parser.Token{
    {
        Kind: &parser.TIdentifier{Value:"foo"},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"bar"},
        Span: ast.Span{
            Start: ast.Location{Line:2, Column:1},
            End:   ast.Location{Line:2, Column:4},
        },
    },
}
---

[TestLexingLiterals - 1]
[]parser.Token{
    {
        Kind: &parser.TString{Value:"hello"},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:7},
        },
    },
}
---

[TestLexingParens - 1]
[]parser.Token{
    {
        Kind: &parser.TIdentifier{Value:"a"},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:1},
            End:   ast.Location{Line:1, Column:2},
        },
    },
    {
        Kind: &parser.TAsterisk{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:3},
            End:   ast.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TOpenParen{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:5},
            End:   ast.Location{Line:1, Column:6},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"b"},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:6},
            End:   ast.Location{Line:1, Column:7},
        },
    },
    {
        Kind: &parser.TPlus{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:8},
            End:   ast.Location{Line:1, Column:9},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"c"},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:10},
            End:   ast.Location{Line:1, Column:11},
        },
    },
    {
        Kind: &parser.TCloseParen{},
        Span: ast.Span{
            Start: ast.Location{Line:1, Column:11},
            End:   ast.Location{Line:1, Column:12},
        },
    },
}
---
